network_policies/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: combined-policy
  namespace: ginflix
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  # Allow ingress from within the same namespace
  - from:
    - podSelector: {}
  # Allow ingress from external sources
  - from:
    - ipBlock:
        cidr: 137.194.0.0/16  # Adjust this to your specific IP range if needed
    ports:
    - protocol: TCP
      port: 8000
